# vogui

./: .gitignore  app.vo  audio.vo  canvas.vo  encode.vo  event.vo  explorer.vo  gui.vo  measure.vo  node.vo  ref.vo  text.vo  timer.vo  transition.vo  virtual_list.vo  virtual_scroll.vo  vo.ext.toml  vo.files  vo.mod  vo.web.json  vo.work  vogui.wasm  widget.vo
.github/workflows/: module-ci.yml
docs/: design-text-measure.md
js/: package-lock.json  package.json  vite.bridge.config.ts  vite.protocol.config.ts  vite.renderer.config.ts
js/src/: audio.ts  canvas.ts  decoder.ts  events.ts  index.ts  mapping.ts  query.ts  refs.ts  renderer.tsx  studio_host_bridge.ts  studio_protocol.ts  studio_renderer.ts  styles.ts  text.ts  types.ts
js/src/components/: VgButton.tsx  VgContextMenu.tsx  VgDialog.tsx  VgDrawer.tsx  VgDropdownMenu.tsx  VgHoverCard.tsx  VgPopover.tsx  VgSelect.tsx  VgTooltip.tsx  VgTransition.tsx  VgTransitionGroup.tsx  VgVirtualList.tsx  index.ts  transitions.ts
js/tests/: ref_actions_smoke.ts
rust/: Cargo.toml
rust/ext/: Cargo.toml
rust/ext/src/: audio.rs  externs.rs  lib.rs  standalone.rs
rust/protocol/: Cargo.toml
rust/protocol/src/: lib.rs
rust/src/: externs.rs  lib.rs
tests/: main.vo  vo.mod
web-artifacts/: vogui.wasm
