[package]
name = "vogui"
version = "0.2.0"
edition = "2021"

[package.metadata.vo]
vomod = "../vo.mod"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vo-vm = { git = "https://github.com/vo-lang/volang", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console", "Window"], optional = true }

# Native-only dependencies (for cargo check on non-wasm targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vo-vm = { git = "https://github.com/vo-lang/volang", features = ["std"] }
vo-runtime = { git = "https://github.com/vo-lang/volang" }
vo-ext = { git = "https://github.com/vo-lang/volang" }
linkme = "0.3"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
vo-runtime = { git = "https://github.com/vo-lang/volang", default-features = false }
vo-ext = { git = "https://github.com/vo-lang/volang", default-features = false, features = ["wasm"] }

[features]
default = ["bindgen"]
bindgen = ["dep:wasm-bindgen", "dep:web-sys"]
wasm-standalone = []

[workspace]

# Redirect git deps to local sibling repos for development
[patch."https://github.com/vo-lang/volang"]
vo-vm      = { path = "../../volang/lang/crates/vo-vm" }
vo-runtime = { path = "../../volang/lang/crates/vo-runtime" }
vo-ext     = { path = "../../volang/lang/crates/vo-ext" }
