[package]
name = "vogui"
version = "0.1.0"
edition = "2021"

[package.metadata.vo]
vomod = "../../vo.mod"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "vo_vogui"
crate-type = ["cdylib", "rlib"]

[dependencies]
vo-vm = { git = "https://github.com/vo-lang/volang", rev = "6069a0cc066062649460d3c409ee227f8b8cb1f6", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console", "Window"], optional = true }

# Native-only dependencies (for cargo check on non-wasm targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vo-vm = { git = "https://github.com/vo-lang/volang", rev = "6069a0cc066062649460d3c409ee227f8b8cb1f6", features = ["std"] }
vo-runtime = { git = "https://github.com/vo-lang/volang", rev = "6069a0cc066062649460d3c409ee227f8b8cb1f6" }
vo-ext = { git = "https://github.com/vo-lang/volang", rev = "6069a0cc066062649460d3c409ee227f8b8cb1f6", default-features = false }
linkme = "0.3"
rodio = { version = "0.19", default-features = false, features = ["wav", "vorbis", "mp3"] }
log = "0.4"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
vo-runtime = { git = "https://github.com/vo-lang/volang", rev = "6069a0cc066062649460d3c409ee227f8b8cb1f6", default-features = false }
vo-ext = { git = "https://github.com/vo-lang/volang", rev = "6069a0cc066062649460d3c409ee227f8b8cb1f6", default-features = false, features = ["wasm"] }
log = "0.4"

[features]
default = ["bindgen", "standalone"]
bindgen = ["dep:wasm-bindgen", "dep:web-sys"]
native = ["vo-ext/native"]
wasm-standalone = []
# standalone: enable native entry-point symbols (vo_ext_get_entries etc.)
# disable when used as rlib dep inside another extension (e.g. voplay)
standalone = ["native"]
